<resources>
    <string name="app_name">Roam</string>
    <string name="facebook_app_id">1548302398812375</string>
    <string name="title">Roam</string>
    <string name="fb_login_protocol_scheme">fb1548302398812375</string>
    <string name="welcome">Welcome to</string>
    <string name="begin">Begin</string>
    <string name="titleHint">Enter a title.</string>
    <string name="bodyHint">What\'s your story?</string>
    <string name="dateHint">When did this happen?</string>
    <string name="title_of_story">Title of story</string>
    <string name="preview_of_story">Preview of story</string>
    <string name="profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="launchMap">Launch Map</string>
    <string name="take_a_picture">Take a Picture</string>
    <string name="upload_a_picture">Upload a Picture</string>
    <string name="post">Post</string>
    <string name="add_a_picture">Add a picture</string>
    <string name="typeLocationHint">Type in your Location</string>
    <string name="searchLocation">Search for a Location</string>
    <string name="email">Email</string>
    <string name="numberOfPosts">Number of Posts</string>
    <string name="launchMapPrompt">Click below to see where you have been!</string>
    <string name="rotate">Rotate</string>
    <string name="submit">Submit</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="viewMode">View Mode</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hintForUri">Selected image . . .</string>
    <string name="search">Search</string>
    <string name="signOut">Sign Out</string>
    <string name="share">Share</string>
    <string name="done">Done</string>
    <string name="snackbar_add">Post Added</string>
    <string name="snackbar_delete">Post Deleted</string>
    <string name="snackbar_action">Undo</string>
    <string name="viewTimeline">Go to Timeline</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="viewPost">View Post</string>
    <string name="editPost">Edit Post</string>
    <string name="makePost">Make a Post</string>
</resources>
