<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="annikatsai.portfolioapp.PostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">
    </android.support.v7.widget.Toolbar>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTitle"
        android:background="@android:color/transparent"
        android:hint="@string/titleHint"
        android:layout_below="@+id/toolbar"
        android:layout_alignRight="@+id/btnAdd"
        android:layout_alignEnd="@+id/btnAdd" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:background="@android:color/transparent"
        android:id="@+id/etBody"
        android:hint="@string/bodyHint"
        android:layout_below="@+id/etDate"
        android:layout_alignLeft="@+id/etDate"
        android:layout_alignStart="@+id/etDate" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:background="@android:color/transparent"
        android:ems="10"
        android:id="@+id/etDate"
        android:hint="@string/dateHint"
        android:layout_below="@+id/etTitle"
        android:layout_alignLeft="@+id/etTitle"
        android:layout_alignStart="@+id/etTitle" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_picture"
        android:id="@+id/btnAdd"
        android:onClick="onAddClick"
        android:textAllCaps="false"
        android:layout_below="@+id/etBody"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchLocation"
        android:id="@+id/btnSelectLocation"
        android:onClick="selectLocation"
        android:textAllCaps="false"
        android:layout_below="@+id/etBody"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/tvLocation"
        android:layout_below="@+id/btnSelectLocation"
        android:layout_alignLeft="@+id/etBody"
        android:layout_alignStart="@+id/etBody" />

</RelativeLayout>
