<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:htext="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vjhbrbvjdttgndihjdkhjnuteuinvfn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="annikatsai.portfolioapp.PostActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white">

        <com.hanks.htextview.HTextView
            android:id="@+id/toolbar_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            htext:animateType="typer"
            htext:fontAsset="fonts/Pacifico.ttf"
            android:layout_gravity="left"
            android:text="@string/editPost"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivPreview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:hint="@string/titleHint"
        android:singleLine="true"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fabDate"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/dateHint"
        android:padding="5dp"
        android:textColor="#000000"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fabLocation"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/searchLocation"
        android:padding="5dp"
        android:textColor="#000000"
        android:textSize="17sp" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabDate"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_below="@+id/etTitle"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/tvDate"
        android:layout_toStartOf="@+id/tvDate"
        android:onClick="showDatePickerDialog"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_date"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabLocation"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/fabDate"
        android:layout_alignStart="@+id/fabDate"
        android:layout_below="@+id/fabDate"
        android:layout_marginTop="16dp"
        android:onClick="selectLocation"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_location"
        android:tint="@android:color/white"
        app:backgroundTint="@color/colorAccent"
        app:fabSize="mini" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:background="@drawable/dotted"
        android:layout_below="@+id/toolbar"
        android:layout_alignRight="@+id/tvDate"
        android:layout_alignEnd="@+id/tvDate"
        android:layout_marginTop="57dp" />


    <TextView
        android:id="@+id/tvDivider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvLocation"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorAccent" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/etBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fabSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvLocation"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="37dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:fontFamily="sans-serif-light"
        android:gravity="top|left"
        android:hint="@string/bodyHint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/etBody"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/etBody"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_button_states"
        android:onClick="onFinishEdit"
        android:text="@string/save"
        android:textAllCaps="true" />

    <ImageButton
        android:id="@+id/ibtnRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivPreview"
        android:layout_toEndOf="@+id/ivPreview"
        android:layout_toRightOf="@+id/ivPreview"
        android:background="@drawable/ic_remove"
        android:onClick="onRemoveClick" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ibtnPlus"
        android:layout_below="@+id/ibtnRemove"
        android:layout_toRightOf="@+id/ivPreview"
        android:layout_toEndOf="@+id/ivPreview"
        android:background="@drawable/ic_add"
        android:onClick="onAddClick"/>

</RelativeLayout>


