<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:htext="http://schemas.android.com/apk/res-auto"
    tools:context="annikatsai.portfolioapp.CameraActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorPrimary">

        <com.hanks.htextview.HTextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_a_picture"
            htext:animateType="typer"
            htext:fontAsset="fonts/Pacifico.ttf"
            android:textColor="@android:color/white"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="left"
            />
    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/btnTake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onTakeClick"
        android:text="@string/take_a_picture"
        android:textAllCaps="false"
        android:background="@drawable/shape_button_states"
        style="?android:attr/borderlessButtonStyle"
        android:layout_above="@+id/ivPreview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="16dp"
        android:layout_toLeftOf="@+id/tvVerticalDivder"
        android:layout_toStartOf="@+id/tvVerticalDivder" />

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onUploadClick"
        android:text="@string/upload_a_picture"
        android:textAllCaps="false"
        android:background="@drawable/shape_button_states"
        style="?android:attr/borderlessButtonStyle"
        android:layout_above="@+id/ivPreview"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/tvVerticalDivder"
        android:layout_marginRight="16dp"
        android:layout_toRightOf="@+id/tvVerticalDivder" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:id="@+id/tvVerticalDivder"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/ivPreview" />

    <ImageView
        android:id="@+id/ivPreview"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" />

    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:src="@drawable/ic_rotate"-->
        <!--app:fabSize="normal"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/fabRotate"-->
        <!--android:onClick="onRotateClick"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignLeft="@+id/ivPreview"-->
        <!--android:layout_alignStart="@+id/ivPreview" />-->

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSubmitClick"
        android:text="@string/submit"
        android:background="@drawable/shape_button_states"
        android:textAllCaps="true"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/ivPreview"
        android:layout_alignEnd="@+id/ivPreview"
        android:layout_marginBottom="18dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@android:color/black"
        android:src="@drawable/ic_rotate"
        android:background="@drawable/shape_button_states"
        android:id="@+id/fabRotate"
        android:onClick="onRotateClick"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_alignLeft="@+id/ivPreview"
        android:layout_alignStart="@+id/ivPreview"
        android:layout_alignTop="@+id/btnSave" />

</RelativeLayout>